added token checks
