# internal/models/usermodel.go
@@ -42,6 +42,42 @@ type UpdateHistory struct {
 //		  "uid": "123e4567-e89b-12d3-a456-426614174111",
 //		  "userid": "12345",
 //		  "username": "john_doe",
+//		  "role": "Admin",
+//		  "status": "Active",
+//		  "created_time": "2023-04-12T15:04:05Z",
+//		  "updated_time": "2023-04-12T15:04:05Z",
+//	   	  "mobile_number": "9876543210",
+//		  "update_history": [
+//		    {
+//		      "updated_comments": "Updated user role",
+//		      "updated_time": "2023-04-12T15:04:05Z"
+//		    }
+//		  ],
+//		  "remarks": "User is active and verified",
+//		  "org_uuid": "123e4567-e89b-12d3-a456-426614174000"
+//		}
+type UserRespModel struct {
+	UId           string             `bson:"uid" json:"uid" example:"123e4567-e89b-12d3-a456-426614174111"`           // Auto-incremented unique identifier
+	UserId        string             `bson:"userid" json:"userid" example:"112345"`                                   // Unique identifier for the user
+	Username      string             `bson:"username" json:"username" example:"john_doe"`                             // Username of the user
+	Role          Role               `bson:"role" json:"role" example:"Admin"`                                        // Role of the user
+	Status        UserStatus         `bson:"status" json:"status" example:"Active"`                                   // Status of the user
+	CreatedTime   string             `bson:"created_time" json:"created_time" example:"2023-04-12T15:04:05Z"`         // Time when the user was created
+	UpdatedTime   string             `bson:"updated_time" json:"updated_time" example:"2023-04-12T15:04:05Z"`         // Time when the user was last updated
+	UpdateHistory []UpdateHistory    `bson:"update_history" json:"update_history"`                                    // History of updates
+	Remarks       string             `bson:"remarks" json:"remarks" example:"User is active and verified"`            // Additional remarks about the user
+	MobileNumber  string             `bson:"mobile_number" json:"mobile_number" example:"9876543210"`                 // Mobile number of the user
+	OrgStatus     OrganisationStatus `bson:"org_status" json:"org_status" example:"123456"`                           // Organization ID
+	OrgUUID       string             `bson:"org_uuid" json:"org_uuid" example:"123e4567-e89b-12d3-a456-426614174000"` // UUID of the organization
+}
+
+// UserModel represents a user in the system.
+// @Description User model containing all user-related information.
+//
+//		@Example {
+//		  "uid": "123e4567-e89b-12d3-a456-426614174111",
+//		  "userid": "12345",
+//		  "username": "john_doe",
 //		  "password": "plane_password",
 //		  "role": "Admin",
 //		  "status": "Active",
@@ -88,15 +124,14 @@ type UserModel struct {
 //		}
 
 type UserReqModel struct {
-	UserId       string             `bson:"userid" json:"userid" binding:"required" example:"112345"`                         // Unique identifier for the user
-	Username     string             `bson:"username" json:"username"  binding:"required" example:"john_doe"`                  // Username of the user
-	Password     string             `bson:"password" json:"password"  binding:"required" example:"plane_password"`            // Hashed password
-	Role         Role               `bson:"role" json:"role"  binding:"required" example:"Admin"`                             // Role of the user
-	Status       UserStatus         `bson:"status" json:"status"  binding:"required" example:"Active"`                        // Status of the user
-	Remarks      string             `bson:"remarks" json:"remarks"  binding:"required" example:"User is active and verified"` // Additional remarks about the user
-	MobileNumber string             `bson:"mobile_number" json:"mobile_number"  binding:"required" example:"9876543210"`      // Mobile number of the user
-	OrgStatus    OrganisationStatus `bson:"org_status" json:"org_status"  binding:"required" example:"123456"`                // Organization ID
-	Org_Id       string             `bson:"org_id" json:"org_id"  binding:"required" example:"123456"`                        // UUID of the organization
+	UserId       string     `bson:"userid" json:"userid" binding:"required" example:"112345"`                         // Unique identifier for the user
+	Username     string     `bson:"username" json:"username"  binding:"required" example:"john_doe"`                  // Username of the user
+	Password     string     `bson:"password" json:"password"  binding:"required" example:"plane_password"`            // Hashed password
+	Role         Role       `bson:"role" json:"role"  binding:"required" example:"Admin"`                             // Role of the user
+	Status       UserStatus `bson:"status" json:"status"  binding:"required" example:"Active"`                        // Status of the user
+	Remarks      string     `bson:"remarks" json:"remarks"  binding:"required" example:"User is active and verified"` // Additional remarks about the user
+	MobileNumber string     `bson:"mobile_number" json:"mobile_number"  binding:"required" example:"9876543210"`      // Mobile number of the user
+	Org_Id       string     `bson:"org_id" json:"org_id"  binding:"required" example:"123456"`                        // UUID of the organization
 }
 
 // LoginRequest represents the request payload for the login API.
